--- a/css-editor/codemirror/lib/custom_css.css
+++ b/css-editor/codemirror/lib/custom_css.css
@@ -1,23 +1,24 @@
-/* class */
-.cm-s-default .cm-qualifier {color: hsl(0, 75%, 60%);}
-.cm-s-default .cm-keyword {color: hsla(0, 100%, 50%, 1); font-weight: bold;}
+/* class selector */
+.cm-s-default .cm-qualifier     {color: hsl(0, 75%, 60%);}
+
+/* keyword */
+.cm-s-default .cm-keyword       {color: hsla(0, 100%, 50%, 1); font-weight: bold;}
 
 /* value */
-.cm-s-default .cm-atom {color: hsl(0, 0%, 20%);}
-.cm-s-default .cm-number {color: hsl(0, 0%, 20%);}
+.cm-s-default .cm-atom          {color: hsl(0, 0%, 20%);}
+.cm-s-default .cm-number        {color: hsl(0, 0%, 20%);}
 
 /* comment */
-.cm-s-default .cm-comment {color: green;}
+.cm-s-default .cm-comment       {color: hsla(120, 100%, 25%,0.75);}
 
 /* id */
-.cm-s-default .cm-builtin {color: hsl(220, 100%, 50%);}
+.cm-s-default .cm-builtin       {color: hsl(220, 100%, 50%);}
 
 /* tag */
-.cm-s-default .cm-tag {color: hsl(240, 100%, 60%);}
+.cm-s-default .cm-tag           {color: hsl(240, 100%, 60%);}
 
+/* property */
+.cm-s-default .cm-property      {color: hsl(230, 40%, 60%);}
 
-.cm-s-default .cm-property {color: hsl(230, 40%, 60%);}
-
-
-/* :after */
-.cm-s-default .cm-variable-3 {color: hsl(40, 100%, 40%);}
+/* pseudo-classes */
+.cm-s-default .cm-variable-3    {color: hsl(40, 100%, 40%);}
