--- a/css-editor/styles.css
+++ b/css-editor/styles.css
@@ -24,6 +24,7 @@ body {
     box-shadow: 0 1px 3px rgba(0,0,0,.2);
     margin-right: 20px;
     color: rgba(0,0,0,.75);
+    color: rgba(0,0,0,.8);
 }
 .panel:last-child {
     margin-right: 0;
@@ -32,7 +33,7 @@ body {
 
 #sections {
     user-select: none;
-    width: 250px;
+    width: 300px;
     min-height: 200px;
 }
 
@@ -46,12 +47,16 @@ body {
 
 #sections ul li {
     line-height: 1.5;
-    padding: 5px 10px;
+    padding: 5px 8px;
 }
 
 #sections ul li:hover {
     color: rgba(0,0,0,.9);
-    background-color: rgba(0,0,0,.05);
+    background-color: rgba(0,0,0,.04);
+}
+
+#sections ul li.depth-1:hover {
+    color: rgba(0,0,0,.7);
 }
 
 #sections ul li.active {
@@ -59,9 +64,29 @@ body {
     background-color: rgba(0,0,0,.1);
 }
 
+#sections ul li.depth-1.active {
+    color: rgba(0,0,0,.8);
+    background-color: rgba(0,0,0,.1);
+}
+
 #sections ul li.new {
     user-select: text;
 }
+
+#sections .ui-sortable .ui-sortable-placeholder {
+    outline: 1px dashed rgba(0,0,0,.25);
+    outline-offset: -1px;
+    visibility: visible !important;
+    background-color: transparent !important;
+}
+#sections .ui-sortable .depth-1 {
+    margin-left: 25px;
+    color: rgba(0,0,0,.4);
+}
+
+
+
+
 
 
 .clearfix {
@@ -95,10 +120,9 @@ body {
 }
 
 
-.CodeMirror,
-#code {
+.CodeMirror, #code {
     height: calc(100% - 37px);
-    padding: 10px;
+    /* padding: 10px; */
     font-family: monospace;
     width: 100%;
     /* height: 550px !important; */
@@ -106,6 +130,12 @@ body {
     border: 1px solid rgba(0,0,0,.1);
     overflow: auto;
     cursor: text;
+}
+pre.CodeMirror-line {
+    padding-left: 5px;
+}
+.CodeMirror-activeline-background {
+    background-color: hsl(215, 50%, 93%) !important;
 }
 
 #parse {
