--- a/stopwatch/styles.css
+++ b/stopwatch/styles.css
@@ -13,6 +13,12 @@
     font-family: inherit;
     line-height: inherit;
 }
+
+html, body {
+    width: 100%;
+    height: 100%;
+}
+
 body {
     box-sizing: border-box;
     background-color: hsl(0, 0%, 100%);
@@ -20,8 +26,8 @@ body {
 }
 
 #app {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
 }
