--- a/crab/style.css
+++ b/crab/style.css
@@ -1,15 +1,49 @@
+* {
+    user-select: none;
+    box-sizing: border-box;
+}
 body {
     margin: 0;
     overflow: hidden;
 }
+
 #game {
     width: 100vw;
     height: 100vh;
     background-color: azure;
     background-image: linear-gradient(azure, teal);
 }
+
 #crab {
     width: 100px;
     position: absolute;
     opacity: 0.75;
 }
+
+.moustache-wrapper {
+    position: absolute;
+    opacity: 0.75;
+    bottom: 150px;
+    left: 50%;
+    translate: -50%;
+    animation: 400ms infinite linear spin;
+    width: fit-content;
+    aspect-ratio: 1;
+    display: flex;
+    align-items: center;
+}
+.moustache {
+    width: 50px;
+}
+.moustache-wrapper:hover {
+    animation-duration: 1s;
+}
+
+@keyframes spin {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
