--- a/crab/style.css
+++ b/crab/style.css
@@ -10,7 +10,7 @@ body {
     width: 100vw;
     height: 100vh;
     background-color: azure;
-    background-image: linear-gradient(azure, teal);
+    background-image: linear-gradient(hsl(180, 40%, 80%), hsl(180, 100%, 25%));
     user-select: none;
 }
 
@@ -27,4 +27,23 @@ body {
     to {
         transform: rotate(360deg);
     }
+}
+
+.bubble {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: hsl(200, 10%, 90%, 0.75);
+    border: 1px solid hsla(210, 30%, 95%, 0.75);
+    box-shadow: 0 5px 10px hsla(0, 0%, 0%, 0.05), inset -5px -5px 10px rgba(255, 255, 255, 0.25);
+    background-image: radial-gradient(
+        circle at 30% 30%,
+        hsla(0, 0%, 100%, 0.5),
+        hsla(195, 50%, 80%, 0.25),
+        hsla(195, 100%, 50%, 0.1)
+    );
+    opacity: 0.5;
+    position: absolute;
+    left: 100px;
+    top: 100px;
 }
