--- a/crab/assets/style.css
+++ b/crab/assets/style.css
@@ -4,6 +4,7 @@
 body {
     margin: 0;
     overflow: hidden;
+    user-select: none;
 }
 
 #game-canvas {
@@ -12,12 +13,6 @@ body {
     background-color: azure;
     background-image: linear-gradient(hsl(180, 40%, 80%), hsl(180, 100%, 25%));
     user-select: none;
-}
-
-#crab {
-    width: 100px;
-    position: absolute;
-    opacity: 0.75;
 }
 
 @keyframes spin {
@@ -30,18 +25,34 @@ body {
 }
 
 .bubble {
+    --border: 1px;
     width: 100px;
     height: 100px;
     border-radius: 50%;
     background-color: hsl(200, 10%, 90%, 0.75);
-    border: 1px solid hsla(210, 30%, 95%, 0.75);
-    box-shadow: 0 5px 10px hsla(0, 0%, 0%, 0.05), inset -5px -5px 10px rgba(255, 255, 255, 0.25);
-    background-image: radial-gradient(
+    border: var(--border) solid hsla(210, 30%, 95%, 0.75);
+    /* box-shadow: 0 5px 10px hsla(0, 0%, 0%, 0.05), inset -5px -5px 10px rgba(255, 255, 255, 0.25); */
+    /* background-image: radial-gradient(
         circle at 30% 30%,
         hsla(0, 0%, 100%, 0.5),
         hsla(195, 50%, 80%, 0.25),
         hsla(195, 100%, 50%, 0.1)
-    );
+    ); */
     opacity: 0.5;
     position: absolute;
+}
+
+.bounding-box::before {
+    content: "";
+    position: absolute;
+    top: calc(0px - var(--border));
+    left: calc(0px - var(--border));
+    right: calc(0px - var(--border));
+    bottom: calc(0px - var(--border));
+    outline: 1px dashed black;
+    border-radius: 0;
+    pointer-events: none;
+}
+img.bounding-box {
+    outline: 1px dashed black;
 }
